--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 appnope==0.1.0
+astroid==1.6.0
 attrs==17.3.0
 bleach==2.1.2
+capslayer==0.1.0
+cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
+enum34==1.1.6
 html5lib==1.0.1
 ipykernel==4.7.0
 ipython==6.2.1
 ipython-genutils==0.2.0
 ipywidgets==7.0.5
+isort==4.2.15
 jedi==0.11.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -15,33 +20,49 @@ jupyter==1.0.0
 jupyter-client==5.2.0
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+lazy-object-proxy==1.3.1
+Markdown==2.6.10
 MarkupSafe==1.0
+matplotlib==2.1.1
+mccabe==0.6.1
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.2.2
 numpy==1.13.3
+olefile==0.44
 pandas==0.21.1
 pandocfilters==1.4.2
 parso==0.1.1
 pexpect==4.3.1
 pickleshare==0.7.4
+Pillow==4.3.0
 pluggy==0.6.0
 prompt-toolkit==1.0.15
+protobuf==3.5.1
 ptyprocess==0.5.2
 py==1.5.2
 Pygments==2.2.0
+pylint==1.8.1
+pyparsing==2.2.0
 pytest==3.3.1
 python-dateutil==2.6.1
 pytz==2017.3
 pyzmq==16.0.3
 qtconsole==4.3.1
+scikit-learn==0.19.1
+scipy==1.0.0
 simplegeneric==0.8.1
 six==1.11.0
+tensorflow==1.4.1
+tensorflow-tensorboard==0.4.0rc3
 terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.2
+tqdm==4.19.5
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.13
 widgetsnbextension==3.0.8
+wrapt==1.10.11
