--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jupyter==1.0.0
 jupyter-client==5.2.0
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+Keras==2.1.2
 lazy-object-proxy==1.3.1
 Markdown==2.6.10
 MarkupSafe==1.0
@@ -48,6 +49,7 @@ pyparsing==2.2.0
 pytest==3.3.1
 python-dateutil==2.6.1
 pytz==2017.3
+PyYAML==3.12
 pyzmq==16.0.3
 qtconsole==4.3.1
 scikit-learn==0.19.1
