--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
 enum34==1.1.6
+h5py==2.7.1
 html5lib==1.0.1
 ipykernel==4.7.0
 ipython==6.2.1
@@ -28,6 +29,7 @@ mccabe==0.6.1
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
+networkx==2.0
 notebook==5.2.2
 numpy==1.13.3
 olefile==0.44
@@ -48,9 +50,11 @@ pyparsing==2.2.0
 pytest==3.3.1
 python-dateutil==2.6.1
 pytz==2017.3
+PyWavelets==0.5.2
 PyYAML==3.12
 pyzmq==16.0.3
 qtconsole==4.3.1
+scikit-image==0.13.1
 scikit-learn==0.19.1
 scipy==1.0.0
 simplegeneric==0.8.1
